// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compiler: optimize interpolation consecutive text 1`] = `
"const _Vue = Vue

return function render() {
  with (this) {
    const { toString: _toString } = _Vue
    
    return _toString(foo) + \\" bar \\" + _toString(baz)
  }
}"
`;

exports[`compiler: optimize interpolation consecutive text between elements 1`] = `
"const _Vue = Vue

return function render() {
  with (this) {
    const { createVNode: _createVNode, toString: _toString, Fragment: _Fragment, openBlock: _openBlock, createBlock: _createBlock } = _Vue
    
    return (_openBlock(), _createBlock(_Fragment, null, [
      _createVNode(\\"div\\"),
      _toString(foo) + \\" bar \\" + _toString(baz),
      _createVNode(\\"div\\")
    ]))
  }
}"
`;

exports[`compiler: optimize interpolation consecutive text mixed with elements 1`] = `
"const _Vue = Vue

return function render() {
  with (this) {
    const { createVNode: _createVNode, toString: _toString, Fragment: _Fragment, openBlock: _openBlock, createBlock: _createBlock } = _Vue
    
    return (_openBlock(), _createBlock(_Fragment, null, [
      _createVNode(\\"div\\"),
      _toString(foo) + \\" bar \\" + _toString(baz),
      _createVNode(\\"div\\"),
      _toString(foo) + \\" bar \\" + _toString(baz),
      _createVNode(\\"div\\")
    ]))
  }
}"
`;

exports[`compiler: optimize interpolation no consecutive text 1`] = `
"const _Vue = Vue

return function render() {
  with (this) {
    const { toString: _toString } = _Vue
    
    return _toString(foo)
  }
}"
`;

exports[`compiler: optimize interpolation with prefixIdentifiers: true 1`] = `
"const { toString } = Vue

return function render() {
  const _ctx = this
  return toString(_ctx.foo) + \\" bar \\" + toString(_ctx.baz + _ctx.qux)
}"
`;
